# svm

./: CMakeLists.txt  test_notes.txt
sim/: main.cpp  tb_top.cpp
soc/: manifest.json  soc_top.cpp  soc_top.h
soc/ip/: uart.h
vkit/: env.hpp  sequencer.cpp
